Bug 459776 - Cannot go into fullscreen mode
Summary: Cannot go into fullscreen mode
Status: RESOLVED FIXED
Alias: None
Product: Koko
Classification: Applications
Component: General (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR minor
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2022-09-28 14:35 UTC by Jack Hill
Modified: 2023-01-25 17:53 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jack Hill 2022-09-28 14:35:00 UTC
SUMMARY
This is on a git master build from commit 19e4c82aac3aa8b93dbbca9123298e5c38696b58 but it was also occurring when I built from the tag 22.06 or 22.04 (can't remember which)

STEPS TO REPRODUCE
1. Open Koko
2. Open a photo
3. Click fullscreen

OBSERVED RESULT
Nothing happens
Terminal output:
    qrc:/qml/ImageViewPage.qml:158: TypeError: Property 'saveWindowState' of object Main_QMLTYPE_138(0x19eca00) is not a function

EXPECTED RESULT
Should enter fullscreen mode

SOFTWARE/OS VERSIONS
Operating System: openSUSE Tumbleweed 20220925
KDE Plasma Version: 5.25.5
KDE Frameworks Version: 5.98.0
Qt Version: 5.15.5
Kernel Version: 5.19.10-1-default (64-bit)

ADDITIONAL INFORMATION
Comment 1 Jack Hill 2022-09-28 14:47:37 UTC
Seems to have been broken in commit 994ff2145d4c38bfb36d00b6f8edfe128e7f1cd5 when the function saveWindowState was deleted in Main.qml
Comment 2 Jack Hill 2023-01-25 12:50:02 UTC
(In reply to Jack Hill from comment #1)
> Seems to have been broken in commit 994ff2145d4c38bfb36d00b6f8edfe128e7f1cd5
> when the function saveWindowState was deleted in Main.qml

This also broke the slideshow functionality
Comment 3 Carl Schwan 2023-01-25 17:53:36 UTC
Git commit 20be0503dd2cdc9eef75736099d28d25bbc2490c by Carl Schwan.
Committed on 25/01/2023 at 17:53.
Pushed by carlschwan into branch 'master'.

Fix entering full screen and slideshow mode

Signed-off-by: Carl Schwan <carl@carlschwan.eu>

M  +10   -0    src/controller.cpp
M  +1    -0    src/controller.h
M  +6    -3    src/qml/ImageViewPage.qml
M  +3    -1    src/qml/Main.qml
M  +2    -1    src/qml/SlideshowManager.qml

https://invent.kde.org/graphics/koko/commit/20be0503dd2cdc9eef75736099d28d25bbc2490c