Fix entering full screen and slideshow mode

BUG: 459776

Signed-off-by: Carl Schwan <carl@carlschwan.eu>